# api_async_com_python

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: quart_ci.yaml
src/: __init__.py
src/api/: __init__.py
src/api/routes/: __init__.py  users_route.py
src/controllers/: __init__.py  users_controller.py
src/database/mysql/configs/: __init__.py  database_connection.py
src/database/mysql/models/: __init__.py  users_model.py
src/database/mysql/repositories/: __init__.py  users_repository.py
src/schemas/: __init__.py  user_schema.py
tests/: create_app_test.py
