[project]
name = "crud-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiomysql>=0.2.0",
    "python-decouple>=3.8",
    "quart>=0.20.0",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "coverage>=7.9.2",
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "ruff>=0.12.4",
]
